RESOLVED FIXED198032
Inherited width does not respect max-width and min-width algorithm
https://bugs.webkit.org/show_bug.cgi?id=198032
Summary Inherited width does not respect max-width and min-width algorithm
Andrew H
Reported 2019-05-20 00:07:22 PDT
if an inner element is positioned relative, and has both min-width and max-width specified where min-width > max-width, an outer element with position absolute won't receive the proper width value. min-width / max-width algorithm: 10.4 @ https://www.w3.org/TR/CSS2/visudet.html#min-max-widths JSFiddle demonstrating this behavior: https://jsfiddle.net/booc0mtaco/Lr9bzh07/ (chrome and firefox appear to resolve the width as expected) Expected: outer wrapper (blue) should be as wide as the inner element due to the width algorithm. Actual result: the outer element appears to simply take the max-width value, while the sized element does the proper calculation.
Attachments
Patch (3.32 KB, patch)
2019-05-30 08:15 PDT, Joonghun Park
no flags
Add a WPT test (6.84 KB, patch)
2019-05-30 22:03 PDT, Joonghun Park
no flags
Complete the WPT test's export process (6.84 KB, patch)
2019-05-30 22:11 PDT, Joonghun Park
no flags
Complete the WPT test's export process (6.84 KB, patch)
2019-05-30 22:12 PDT, Joonghun Park
no flags
Radar WebKit Bug Importer
Comment 1 2019-05-20 17:18:38 PDT
Joonghun Park
Comment 2 2019-05-30 08:15:38 PDT
Joonghun Park
Comment 3 2019-05-30 22:03:45 PDT
Created attachment 371034 [details] Add a WPT test
Joonghun Park
Comment 4 2019-05-30 22:11:32 PDT
Created attachment 371035 [details] Complete the WPT test's export process
Joonghun Park
Comment 5 2019-05-30 22:12:39 PDT
Created attachment 371036 [details] Complete the WPT test's export process
Joonghun Park
Comment 6 2019-05-30 22:18:26 PDT
Could you please review this change? And I wonder the included wpt test case will be merged automatically to the wpt github repository. At the command prompt below, Would you like to export the web-platform-tests changes to a WPT GitHub repository? [Y/n]: y I coundn't proceed the process smoothly(failed with some error in fact), so I wonder I don't have to care about that wpt export failure message.
Joonghun Park
Comment 7 2019-05-30 23:00:29 PDT
I've read https://lists.webkit.org/pipermail/webkit-dev/2017-December/029837.html, and succeeded to update wpt test case with PR form using it. So current state of this patch is that if this patch get r+, the included wpt test can be merged too into wpt github repo.
WebKit Commit Bot
Comment 8 2019-05-31 09:37:19 PDT
Comment on attachment 371036 [details] Complete the WPT test's export process Clearing flags on attachment: 371036 Committed r245966: <https://trac.webkit.org/changeset/245966>
WebKit Commit Bot
Comment 9 2019-05-31 09:37:21 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.