Always min-width should win over max-width. https://bugs.webkit.org/show_bug.cgi?id=198032

Reviewed by Darin Adler.

In the spec, https://www.w3.org/TR/CSS21/visudet.html#min-max-widths,
the following algorithm describes how the two properties influence
the used value of the 'width' property.

1. The tentative used width is calculated (without 'min-width' and 'max-width')
following the rules under "Calculating widths and margins" above.
2. If the tentative used width is greater than 'max-width',
the rules above are applied again, but this time using the computed value of 'max-width'
as the computed value for 'width'.
3. If the resulting width is smaller than 'min-width', the rules above are applied again,
but this time using the value of 'min-width' as the computed value for 'width'.

LayoutTests/imported/w3c:

* web-platform-tests/css/css-sizing/min-width-max-width-precedence-expected.txt: Added.
* web-platform-tests/css/css-sizing/min-width-max-width-precedence.html: Added.

Source/WebCore:

* rendering/RenderBlock.cpp:
(WebCore::RenderBlock::computePreferredLogicalWidths):


Canonical link: https://commits.webkit.org/212443@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@245966 268f45cc-cd09-0410-ab3c-d52691b4dbfc